# verisso

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md  requirements.txt
bk/: bbs_sign_bk  tbbs_sign_bk
exp/: main.py
exp/cloudlab_profile/: verisso-r320-n-8.py
exp/powder/: experiment.py  rpc.py  ssh.py
proverif/: tok_issue.pv  vc_issue.pv
scripts/: kill.sh
src/: Signer.rs  auth_server.rs  auth_service.rs  authentication_client.rs  authentication_server.rs  backup.rs  bbs_sign.rs  config.rs  constant.rs  constants.rs  exp_utils.rs  main.rs  main_bk  ot.rs  server.rs  signer.rs  signer_server.rs  tbbs_sign.rs  wire.rs
src/helper/: encoder.rs  message.rs
