[package]
name = "IdPServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbs_plus = "0.23.0"
rand = "0.8.5"
dock_crypto_utils = "0.21.0"
schnorr_pok = "0.21.0"
test_utils = "0.4.0"
oblivious_transfer_protocols = "0.10.0"
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.1", default-features = false }
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
rayon = { version = "1" }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.14.0", default-features = false, features = [
    "macros",
] }
zeroize = { version = "1.8.1", features = ["derive"] }
blake2 = { version = "0.10", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
itertools = "0.13.0"
secret_sharing_and_dkg = "0.14.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
base64 = "0.22.1"

[dependencies.ark-serialize]
version = "^0.4.2"
default-features = false
features = ["derive"]

[[bin]]
name = "signer"
path = "src/signer_server.rs"

[[bin]]
name = "as"
path = "src/auth_server.rs"

[[bin]]
name = "client"
path = "src/authentication_client.rs"
